# jupyterlab_dosbox

./: .gitignore  .prettierignore  MANIFEST.in  README.md  install.json  package.json  pyproject.toml  setup.cfg  setup.py  tsconfig.json  webpack.config.js
.binder/: environment.yml  postBuild
.github/workflows/: build.yml
binder/: environment.yml  postBuild
examples/: dosbox_coredump.ipynb  screenshot.ipynb
jupyter-config/: jupyterlab_dosbox.json
jupyter-config/jupyter_server_config.d/: jupyterlab_dosbox.json
jupyterlab_dosbox/: __init__.py  dosbox_view.py  handlers.py  utils.py
jupyterlab_dosbox/bundles/: dosbox.conf  jsdos.json
src/: contents.ts  dosboxwidget.ts  icon.ts  index.ts  jsdosinterfaces.ts  layerinterface.ts  plugin.ts  standalone.ts  unbounddosinstance.ts  widget.ts
style/: README.md  base.css
