[build-system]
requires = ["jupyter_packaging~=0.10,<2", "jupyterlab~=3.1", "setuptools>=40.8.0", "wheel"]
build-backend = "jupyter_packaging.build_api"

[tool.black]
line-length = 88
target-version = [
  'py36',
  'py37',
  'py38',
  'py39',
]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | yt/frontends/stream/sample_data
)/
| yt/visualization/_colormap_data.py
'''


[tool.isort]
profile = "black"
combine_as_imports = true
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

# The -s option prevents pytest from capturing output sent to stdout
# -v runs pytest in verbose mode
# -rsfE: The -r tells pytest to provide extra test summary info on the events
# specified by the characters following the r. s: skipped, f: failed, E: error
[tool.pytest.ini_options]
addopts = '''
    -s
    -v
    -rsfE
'''
[tool.jupyter-packaging.options]
skip-if-exists = ["jupyterlab_nodeeditor/labextension/static/style.js"]
ensured-targets = ["jupyterlab_nodeeditor/labextension/static/style.js", "jupyterlab_nodeeditor/labextension/package.json"]

[tool.jupyter-packaging.builder]
factory = "jupyter_packaging.npm_builder"

[tool.jupyter-packaging.build-args]
build_cmd = "build:prod"
npm = ["jlpm"]
