[metadata]
name = jupyterlab_dosbox
version = 0.1.0
description = Run DosBox in jupyterlab
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/matthewturk/jupyterlab_dosbox/
author = Matthew Turk
author_email = matthewturk@gmail.com
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    "Framework :: Jupyter",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python",
    License :: OSI Approved :: BSD License
keywords = jupyter jupyterlab jupyterlab3

[options]
packages = find:
install_requires =
    jupyter_server>=1.6,<2
    jupyterlab~=3.1
    ipywidgets>=7.6.1
    traitlets>=5.0.5
python_requires = >3.7,<3.12
    
[flake8]
max-line-length = 88
exclude = doc,
    examples
ignore = E203, # Whitespace before ':' (black compatibility)
    E266, # Too many leading '#' for block comment
    E302, # Expected 2 blank lines, found 0
    E501, # Line too long (let Black deal with line-lenght)
    E741, # Do not use variables named 'I', 'O', or 'l'
    W503, # Line break occurred before a binary operator (black compatibility)
enable-extensions = G  # flake8-logging-format (extension is disabled by default)
